--- a/services/AuthenticationService/Properties/launchSettings.json
+++ b/services/AuthenticationService/Properties/launchSettings.json
@@ -22,11 +22,11 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7117;http://localhost:5120",
+      "applicationUrl": "https://localhost:7118;http://localhost:5120",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development-testingpurposes"
       }
     },
     "IIS Express": {
