Adding the default sqlServerConnection string. Later the connection string will have the real credentials.

--- a/services/AuthenticationService/appsettings.json
+++ b/services/AuthenticationService/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "sqlServerConnection": "server=localhost;Database=yourdatabase;User Id=yourUser;Password=yourpassword;MultipleActiveResultSets=true;Encrypt=false"
+    }
 }
