--- a/services/AuthenticationService/Properties/launchSettings.json
+++ b/services/AuthenticationService/Properties/launchSettings.json
@@ -26,7 +26,7 @@
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7118;http://localhost:5120",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development-testingpurposes"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "IIS Express": {
