--- a/services/AuthenticationService/appsettings.json
+++ b/services/AuthenticationService/appsettings.json
@@ -7,6 +7,6 @@
   },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "sqlServerConnection": "server=localhost;Database=yourdatabase;User Id=yourUser;Password=yourpassword;MultipleActiveResultSets=true;Encrypt=false"
+        "sqlServerConnection": "server=localhost;Database=default;User Id=default;Password=default;MultipleActiveResultSets=true;Encrypt=false"
     }
 }
