--- a/services/AuthenticationService/appsettings.json
+++ b/services/AuthenticationService/appsettings.json
@@ -1,12 +1,17 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "sqlServerConnection": "server=localhost;Database=default;User Id=default;Password=default;MultipleActiveResultSets=true;Encrypt=false"
+    },
+    "JwtSettings": {
+        "Issuer": "",
+        "ExpirationInHours": "",
+        "SecretKey": ""
     }
 }
