Adding connection string to both appsettings

--- a/services/BoardsService/appsettings.Development.json
+++ b/services/BoardsService/appsettings.Development.json
@@ -1,8 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ConnectionStrings": {
+        "SqlServerConnection": "server=localhost;Database=default;User Id=default;Password=yourpass;MultipleActiveResultSets=true;Encrypt=false"
     }
-  }
 }
