--- a/services/BoardsService/appsettings.json
+++ b/services/BoardsService/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "SqlServerConnection": "server=localhost;Database=default;User Id=default;Password=yourpass;MultipleActiveResultSets=true;Encrypt=false"
     }
-  },
-  "AllowedHosts": "*"
 }
