Adding the default JSON fields that will be required when the Configuration providers reads Environment variables. THIS VALUES ARE DEFAULT

--- a/services/BoardsService/appsettings.Development.json
+++ b/services/BoardsService/appsettings.Development.json
@@ -7,5 +7,10 @@
     },
     "ConnectionStrings": {
         "SqlServerConnection": "server=localhost;Database=default;User Id=default;Password=yourpass;MultipleActiveResultSets=true;Encrypt=false"
+    },
+    "JwtSettings": {
+        "Issuer": "defaultString",
+        "ExpirationInHours": "defaultInt",
+        "SecretKey": "defaultStringAsXml"
     }
 }
