--- a/services/BoardsService/appsettings.json
+++ b/services/BoardsService/appsettings.json
@@ -8,5 +8,10 @@
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "SqlServerConnection": "server=localhost;Database=default;User Id=default;Password=yourpass;MultipleActiveResultSets=true;Encrypt=false"
+    },
+    "JwtSettings": {
+        "Issuer": "authService",
+        "Audience": "boardsService",
+        "publicKey": "default String AsXml"
     }
 }
