--- a/src/manto-frontend/angular.json
+++ b/src/manto-frontend/angular.json
@@ -28,7 +28,7 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/purple-green.css",
-              "src/styles.css",
+              "src/styles.scss",
               "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": [
